# learn_opengl

./: CMakeLists.txt  README.md  file_reader.cpp
include/glad/: glad.h
include/stb/: stb_image.h
src/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  camera.h  glad.c  shader.h
src/1GettingStarted/: helloTriangle.cpp  helloTriangleExercise.cpp  shaders.cpp  shadersExercise.cpp  shadersExercise.frag  shadersExercise.vert
src/1GettingStarted/Camera/: camera.cpp
src/1GettingStarted/CoordSystems/: coordSystems.cpp  fragment.frag  vertex.vert
src/1GettingStarted/Textures/: textures.cpp  vertex.vert
src/1GettingStarted/Transformations/: transformations.cpp  vertex.vert
src/2Lighting/BasicLighting/: basicLighting.cpp  colors.frag
src/2Lighting/Colors/: colors.cpp
src/2Lighting/LightCasters/: colors.frag  lightCasters.cpp
src/2Lighting/LightingMaps/: colors.frag  lightingMaps.cpp
src/2Lighting/Materials/: materials.cpp
src/2Lighting/MultipleLightSources/: multipleLightSources.cpp
src/2Lighting/MultipleLightSourcesImgui/: colors.frag  colors.vert  multipleLightSourcesImgui.cpp
src/2Lighting/SphereExperiment/: colors.vert  sphere.cpp  sphere.h  sphereExperiemt.cpp
src/2Lighting/Spolight/: colors.frag  spotlight.cpp
src/3Models/DeskModel/: LightCube.cpp  LightCube.h  colors.frag  models.cpp
src/3Models/Models/: colors.frag  models.cpp
src/4AdvancedOpenGL/Blending/: blendingAlpha.cpp  blendingAlphaDiscard.cpp  colors.frag  colorsAlphaDiscard.frag
src/4AdvancedOpenGL/CubeMaps/: colors.frag  cubeMap.vert  cubeMaps.cpp
src/4AdvancedOpenGL/CubeMapsReflections/: colors.frag  cubeMap.frag  cubeMapsReflections.cpp
src/4AdvancedOpenGL/DepthTesting/: depthTesting.cpp
src/4AdvancedOpenGL/FaceCulling/: faceCulling.cpp
src/4AdvancedOpenGL/Framebuffers/: defaultShader.frag  framebuffers.cpp  shader.frag
src/4AdvancedOpenGL/GeometryShader/: arrow_shader.geom  arrow_shader.vert  colors.frag  explodingSpongebob.cpp
src/4AdvancedOpenGL/StencilTesting/: single_color.frag  stencilTesting.cpp
